# detection-engineer---translation-4ce9d6

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/kubernetes/apps/: api-gateway.yaml  hpa.yaml  mongodb.yaml  pdb.yaml  rabbitmq.yaml  redis.yaml  translation-service.yaml  validation-service.yaml  web.yaml
infrastructure/kubernetes/argocd/: application.yaml  project.yaml
infrastructure/kubernetes/base/: configmap.yaml  ingress.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
infrastructure/kubernetes/cert-manager/: certificate.yaml  issuer.yaml
infrastructure/kubernetes/istio/: authorizationpolicy.yaml  destinationrule.yaml  gateway.yaml  virtualservice.yaml
infrastructure/kubernetes/monitoring/: elk.yaml  grafana.yaml  jaeger.yaml  prometheus.yaml
infrastructure/kubernetes/security/: networkpolicy.yaml  podsecuritypolicy.yaml  rbac.yaml
infrastructure/terraform/aws/: cloudfront.tf  (+12 more)
src/backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml
src/backend/translation-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/translation-service/tests/: __init__.py  conftest.py
src/backend/translation-service/tests/test_formats/: __init__.py  test_crowdstrike.py  test_kql.py  test_paloalto.py  test_qradar.py  test_sigma.py  test_splunk.py  test_yara.py  test_yaral.py
src/backend/translation-service/tests/test_genai/: __init__.py  test_embeddings.py  test_model.py  test_prompts.py
src/backend/translation-service/tests/test_services/: __init__.py  test_translation.py  test_validation.py
src/backend/translation-service/tests/test_utils/: __init__.py  test_logger.py  test_metrics.py
src/backend/translation-service/translation_service/: __init__.py
src/backend/translation-service/translation_service/api/: __init__.py  routes.py
src/backend/translation-service/translation_service/config/: __init__.py  genai.py  logging.py  metrics.py  queue.py
src/backend/translation-service/translation_service/formats/: __init__.py  crowdstrike.py  kql.py  paloalto.py  qradar.py  sigma.py  splunk.py  yara.py  yaral.py
src/backend/translation-service/translation_service/genai/: __init__.py  embeddings.py  model.py  prompts.py
src/backend/translation-service/translation_service/services/: __init__.py  translation.py  validation.py
src/backend/translation-service/translation_service/utils/: __init__.py  logger.py  metrics.py
src/web/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
(+189 files in other folders)
